# chat-cot-mutator

./: .gitattributes  .gitignore  LLM_CLIENT_SETUP.md  README.md  analyze_samples.py  anonymize.ipynb  chat-dsat-mutator_app.py  chat_dsat_mutator_app.py  chat_dsat_mutator_controller.py  chat_mutator_app.py  chat_mutator_controller.py  clean_chat_samples.py  client_config.py  example_phi_usage.py  format_data.py  llm_api_client.py  mutation_data.py  pyproject.toml  rebuild_cache.py  recompute_metrics.py  rejudge_answer_correctness.py  rejudge_samples.py  requirements.huggingface.txt  requirements.txt  test_centralized_cleaning.py  test_extraction_debug.py  test_grounding_threshold.py  test_judge_fix.py  test_messages.py  test_ollama_native.py  test_think_extraction.py  verify_fix.py
app_components/: diff_urls.py  judge.py  mutation_request.py  responses.py  results.py  system_prompt.py
chat_cot_mutator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
clients/: _think_splitter.py  anthropic_client.py  azure_foundry_client.py  base_llm_client.py  client_factory.py  foundry.py  huggingface_client.py  llm_api.py  microsoft_client.py  ollama_client.py  openai_client.py  replay_tool_client.py  vllm_client.py
components/: diff_urls.py  judge.py  mutation_messages.py  mutation_request.py  results.py  system_prompt.py
configs/: exp_mutation_examples.yaml  exp_phi4_gsm8k_1k.yaml  exp_pilot.yaml
core/: pipeline.py  schema.py
datasets/: webgpt.py
eval/: judges.py  metrics.py
mutations/: __init__.py  registry.py
prompts/: claimbreak.txt  (+3 more)
(+68 files in other folders)
